2004-11-29  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-server-source.c: Added NULL pointer checks
	* libseahorse/seahorse-recipients.glade: Fixed Recipients dialog focus issues
	and added mnemonic chars. (bug# 159911)
	
2004-11-28  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-multi-source.h: Added seahorse_multi_source_get_primary
	* libseahorse/seahorse-operation.c: Hold ref on operations during cancel or done
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-pgp-source.h: Implemented SeahorseOperation as complete
	GObject, with derived classes for specific operations
	* data/seahorse.schemas.in:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-gpgmex.h:
	* libseahorse/seahorse-gpgmex-keyserver.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-server-source.c:
	* libseahorse/seahorse-server-source.h:
	* src/Makefile.am:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-properties.c:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-results.glade:
	* src/seahorse-keyserver-search.c:
	* src/seahorse-keyserver-search.glade:
	* src/seahorse-windows.h: Added initial keyserver search support (bug# 157818)
	
2004-11-27  Nate Nielsen <nielsen@memberwebs.com>

	* plugins/gedit/seahorse-gedit.c: Selecting text in recipients dialog
	no longer causes plugin to forget earlier 'to encrypt' selection
	* plugins/gedit/Makefile.am:
	* plugins/gedit/seahorse-gedit.schemas.in: Enable gedit plugin by default
	* libseahorse/seahorse-key-source.c:
	* libseahorse/seahorse-multi-source.c: Fix double free of GPGME context
	* agent/seahorse-agent/cache.c: Fix unknown key problem (bug# 159629)
	* agent/seahorse-agent-secmem.c: Fix secure mem message
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-util.c: