@@ -3,6 +3,11 @@
 	* libseahorse/seahorse-server-source.c: Added NULL pointer checks
 	* libseahorse/seahorse-recipients.glade: Fixed Recipients dialog focus issues
 	and added mnemonic chars. (bug# 159911)
+	* libseahorse/seahorse-operation.c:
+	* libseahorse/seahorse-operation.h:
+	* libseahorse/seahorse-pgp-source.c:
+	* libseahorse/seahorse-server-source.c: Extended SeahorseOperation to allow 
+	error results, cancel status, and additional properties 
 	
 2004-11-28  Nate Nielsen <nielsen@memberwebs.com>
 
